--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "styled-components": "^5.3.1",
     "sweetalert": "^2.1.2",
     "web-vitals": "^1.1.2"
   },
