--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^4.2.0",
+    "react-responsive-carousel": "^3.2.21",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "sweetalert": "^2.1.2",
