--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "emailjs-com": "^3.2.0",
     "font-awesome": "^4.7.0",
     "react": "^17.0.2",
+    "react-awesome": "^0.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^17.0.2",
@@ -22,6 +23,8 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-toggle": "^4.1.2",
+    "reveal": "^0.0.4",
     "sweetalert": "^2.1.2",
     "web-vitals": "^1.1.2"
   },
