--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.2.0",
     "react-responsive-carousel": "^3.2.21",
     "react-router-dom": "^5.2.0",
+    "react-script": "^2.0.5",
     "react-scripts": "^4.0.3",
     "react-toggle": "^4.1.2",
     "reveal": "^0.0.4",
